force-app/main/default/objects/ErrorEvent__e/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <defaultValue>&quot;Salesforce exception&quot;</defaultValue>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>