force-app/main/default/objects/ErrorEvent__e/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <description>The Id for the error</description>
    <label>Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>