force-app/main/default/objects/ErrorEvent__e/fields/TotalErrors__c.field-meta.xml
<CustomField>
    <fullName>TotalErrors__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Total Errors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>